--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "2.1.1",
+    "next": "15.0.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "next": "15.0.4"
+    "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
-    "typescript": "5.7.2",
     "@types/node": "22.10.2",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.0",
     "postcss": "8.4.49",
     "tailwindcss": "3.4.16",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.1.0"
+    "typescript": "5.7.2"
   }
 }
