--- a/package.json
+++ b/package.json
@@ -9,22 +9,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@tanstack/react-hotkeys": "0.3.0",
+    "@tanstack/react-store": "0.9.1",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "lucide-react": "0.575.0",
     "next": "16.1.6",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.38.3",
+    "radix-ui": "1.4.3",
     "react": "19.2.4",
     "react-dom": "19.2.4",
-    "tailwind-merge": "3.5.0"
+    "tailwind-merge": "3.5.0",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.2.1",
     "@types/node": "25.3.0",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
+    "@types/three": "0.183.1",
     "eslint": "9.39.3",
     "eslint-config-next": "16.1.6",
     "postcss": "8.5.6",
+    "shadcn": "3.8.5",
     "tailwindcss": "4.2.1",
+    "tw-animate-css": "1.4.0",
     "typescript": "5.9.3"
   }
 }
